Fix bookmark card styling on dark mode

--- a/assets/css/misc/dark.css
+++ b/assets/css/misc/dark.css
@@ -17,7 +17,10 @@
 .dark-mode .canvas-close,
 .dark-mode .author-social-item:hover,
 .dark-mode .error-code,
-.dark-mode .menu-item-link:hover {
+.dark-mode .menu-item-link:hover,
+.dark-mode .kg-bookmark-title,
+.dark-mode .kg-bookmark-author,
+.dark-mode .kg-bookmark-publisher {
     color: var(--white-color);
 }
 
@@ -43,12 +46,14 @@
 .dark-mode .page-number,
 .dark-mode .author-location,
 .dark-mode .author-social-item,
-.dark-mode .button-arrow-icon {
+.dark-mode .button-arrow-icon,
+.dark-mode .kg-bookmark-description {
     color: var(--dark-mode-secondary-text-color);
 }
 
 .dark-mode .post-footer,
-.dark-mode .page-number {
+.dark-mode .page-number,
+.dark-mode .kg-bookmark-card {
     border-color: var(--dark-mode-border-color);
 }
 
